# baby_domik_bot

./: .dockerignore  .gitignore  BabyDomikBot.service  Dockerfile  Dockerfile-fastapi  Dockerfile-gspread  Dockerfile-migration  Dockerfile-sales  Dockerfile-server  README.md  bot.py  docker-compose.yaml  googlesheets.py  handlers.py  pyproject.toml  requirements-fastapi.txt  requirements-gspread.txt  requirements-migration.txt  requirements-sales.txt  requirements-server.txt  requirements.txt  utilites.py
.github/workflows/: bot_image.yml  fastapi_image.yml  main.yml  push_images.yml  todo.yml
components/: bot.py
components/api/: googlesheets.py  timeweb.py
components/conv_hl/: afisha_conv_hl.py  birthday_conv_hl.py  list_wait_conv_hl.py  reserve_conv_hl.py
components/db/: db_googlesheets.py  pickle_persistence.py
components/handlers/: afisha_hl.py  birthday_hl.py  error_hl.py  list_wait_hl.py  main_hl.py  reserve_hl.py  sub_hl.py  timeweb_hl.py
components/log/: logging_conf.py
conv_hl/: afisha_conv_hl.py  birthday_conv_hl.py  reserve_conv_hl.py
db/: db_googlesheets.py
handlers/: afisha_hl.py  birthday_hl.py  main_hl.py  reserve_hl.py  sub_hl.py  timeweb_hl.py
log/: logging_conf.py
log_debug/: logging_conf.py
src/: bot.py
src/db/: base.py  (+9 more)
support/: BabyDomikBot.service
templates/: booking_form.html  event_details.html  index.html  layout.html  payment_result.html
test/: test_fastapi_web_preview.py  test_issue_repro.py  test_reserve_refactor.py  test_timeweb.py
utilities/: context.py  googlesheets.py  hlp_func.py  log_func.py  utl_func.py
(+180 files in other folders)
