[project]
name = "BabyDomikBot"
version = "5"
authors = [
    { name = "Mikhail Eremin", email = "mr.eremin.ma@ya.ru" },
]
license = { file = "LICENSE" }
description = "Telegram bot on top of python-telegram-bot"
requires-python = ">=3.13"
dependencies = [
    "alembic",
    "black",
    "cachetools",
    "psycopg",
    "psycopg-binary",
    "pydantic",
    "pydantic_core",
    "pydantic-settings",
    "pytest",
    "gspread",
    "gspread-asyncio",
    "python-telegram-bot[ext]",
    "pytz",
    "PyYAML",
    "requests",
    "sqlalchemy",
    "typing_extensions",
    "yookassa",
    "uvicorn",
    "fastapi",
    "faststream[cli]",
    "nats-py",
]
